[gd_scene load_steps=21 format=3 uid="uid://bomkokq1iout4"]

[ext_resource type="Script" path="res://character_body_3d.gd" id="1_8wr8j"]
[ext_resource type="Script" path="res://charge_indicator.gd" id="1_ev4wj"]
[ext_resource type="Texture2D" uid="uid://dcqavkfpkrtfr" path="res://assets/road.png" id="2_accg7"]
[ext_resource type="Script" path="res://button.gd" id="3_jvw1t"]
[ext_resource type="Texture2D" uid="uid://b8vmxqplgvhb6" path="res://assets/autumn_field_puresky_4k.exr" id="4_0a32n"]
[ext_resource type="Script" path="res://options_button.gd" id="5_050hp"]
[ext_resource type="Script" path="res://options_menu.gd" id="6_k4afr"]
[ext_resource type="Script" path="res://option_vsync.gd" id="7_gd1s6"]
[ext_resource type="Script" path="res://option_display_mode.gd" id="8_7hjcq"]
[ext_resource type="Script" path="res://option_anti_aliasing.gd" id="9_uftvq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5nawy"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_q1mk1"]
panorama = ExtResource("4_0a32n")

[sub_resource type="Sky" id="Sky_2sprr"]
sky_material = SubResource("PanoramaSkyMaterial_q1mk1")
radiance_size = 6

[sub_resource type="Environment" id="Environment_k5r6i"]
background_mode = 2
sky = SubResource("Sky_2sprr")
ambient_light_source = 3
reflected_light_source = 2
tonemap_mode = 2
tonemap_white = 16.0
glow_enabled = true
glow_bloom = 0.1
fog_mode = 1
fog_density = 1.0
adjustment_brightness = 0.41

[sub_resource type="BoxShape3D" id="BoxShape3D_3ihnp"]
size = Vector3(32, 32, 32)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_unj4i"]
albedo_texture = ExtResource("2_accg7")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3r8db"]
albedo_texture = ExtResource("2_accg7")

[sub_resource type="QuadMesh" id="QuadMesh_p1ibm"]
material = SubResource("StandardMaterial3D_3r8db")
size = Vector2(32, 32)
orientation = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bndf"]
albedo_texture = ExtResource("2_accg7")
uv1_scale = Vector3(2.5, 2.5, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_qxs8i"]

[node name="Node3D" type="Node3D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChargeIndicator" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -24.0
offset_right = 96.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ev4wj")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_8wr8j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_5nawy")

[node name="LeftWall" type="RayCast3D" parent="CharacterBody3D/CollisionShape3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -1, 0)

[node name="RightWall" type="RayCast3D" parent="CharacterBody3D/CollisionShape3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -1, 0)

[node name="ForwardWall" type="RayCast3D" parent="CharacterBody3D/CollisionShape3D"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, -1, 0)

[node name="BackwardWall" type="RayCast3D" parent="CharacterBody3D/CollisionShape3D"]
transform = Transform3D(1.91069e-15, -4.37114e-08, 50, -1, -4.37114e-08, 1.79995e-19, 4.37114e-08, -1, -2.18557e-06, 0, -1, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
fov = 90.0

[node name="Menus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Menus"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -48.0
offset_right = -24.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"
script = ExtResource("3_jvw1t")

[node name="OptionsButton" type="Button" parent="Menus"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -48.0
offset_right = 152.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
script = ExtResource("5_050hp")

[node name="OptionsMenu" type="VBoxContainer" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("6_k4afr")

[node name="Vsync" type="OptionButton" parent="Menus/OptionsMenu"]
layout_mode = 2
alignment = 1
item_count = 4
popup/item_0/text = "Disabled"
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3
script = ExtResource("7_gd1s6")

[node name="DisplayMode" type="OptionButton" parent="Menus/OptionsMenu"]
layout_mode = 2
alignment = 1
item_count = 4
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Exclusive Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Windowed"
popup/item_2/id = 2
popup/item_3/text = "Maximized"
popup/item_3/id = 3
script = ExtResource("8_7hjcq")

[node name="AntiAliasing" type="OptionButton" parent="Menus/OptionsMenu"]
layout_mode = 2
alignment = 1
item_count = 4
popup/item_0/text = "Off"
popup/item_1/text = "MSAA 2x"
popup/item_1/id = 1
popup/item_2/text = "MSAA 4x"
popup/item_2/id = 2
popup/item_3/text = "MSAA 8x"
popup/item_3/id = 3
script = ExtResource("9_uftvq")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_k5r6i")

[node name="Map" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3314.44, 0)
shadow_enabled = true

[node name="StaticBody3D" type="StaticBody3D" parent="Map"]

[node name="GroundCollision" type="CollisionShape3D" parent="Map/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -16, 0)
shape = SubResource("BoxShape3D_3ihnp")

[node name="GroundMesh" type="MeshInstance3D" parent="Map/StaticBody3D"]
material_override = SubResource("StandardMaterial3D_unj4i")
mesh = SubResource("QuadMesh_p1ibm")
surface_material_override/0 = SubResource("StandardMaterial3D_1bndf")

[node name="Wall" type="StaticBody3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.60832, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Wall"]
shape = SubResource("BoxShape3D_qxs8i")

[node name="GroundMesh" type="MeshInstance3D" parent="Map/Wall"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 31.0112, 0, 0)
material_override = SubResource("StandardMaterial3D_unj4i")
mesh = SubResource("QuadMesh_p1ibm")
surface_material_override/0 = SubResource("StandardMaterial3D_1bndf")
